[Fix] Modify the alignment of the entire large frame
바디를 하나의 박스로 묶어 auto로 정렬시킴. 원래 주었던 left마진과 mainTitle  클래스 삭제

--- a/html-css-practice/Style.css
+++ b/html-css-practice/Style.css
@@ -1,13 +1,9 @@
-#mainTitle {
-  position: relative;
-  height: 100px;
-  left: 15%;
+#fullBox {
+  width: 50%;
+  margin: 0 auto;
+  margin-top: 3%;
 }
-#helper {
-  display: inline-block;
-  height: 100%;
-  vertical-align: middle;
-}
+
 .grayTitle {
   color: gray;
   margin-bottom: 5px;
